# AnySplat

./: demo_gradio.py  inference.py  pyproject.toml  setup.py
anysplat/: eval_nvs.py  eval_pose.py  main.py
anysplat/dataset/: data_module.py
anysplat/loss/: loss.py  loss_chamfer_distance.py  loss_depth.py  loss_depth_consis.py  loss_depth_gt.py  loss_distill.py  loss_huber.py  loss_lod.py  loss_lpips.py  loss_mse.py  loss_normal_consis.py  loss_opacity.py  loss_point.py
anysplat/misc/: utils.py
anysplat/model/: model_wrapper.py
anysplat/model/decoder/: decoder.py  decoder_splatting_cuda.py
anysplat/model/encoder/: anysplat.py  encoder.py
anysplat/model/encoder/backbone/: backbone.py  backbone_croco.py  backbone_croco_multiview.py  backbone_dino.py  backbone_resnet.py
anysplat/model/encoder/common/: gaussian_adapter.py
anysplat/model/encoder/heads/: vggt_dpt_gs_head.py
anysplat/model/encoder/vggt/heads/: camera_head.py
anysplat/model/encoder/vggt/models/: aggregator.py  vggt.py
anysplat/model/model/: anysplat.py
anysplat/post_opt/: simple_trainer.py
anysplat/utils/: ba.py  cropping.py  pose.py
